--- a/kanidm_unix_int/pam_kanidm/Cargo.toml
+++ b/kanidm_unix_int/pam_kanidm/Cargo.toml
@@ -11,5 +11,5 @@ path =  "src/lib.rs"
 
 [dependencies]
 kanidm_unix_int = { path = "../", version = "1.1.0-alpha" }
-async-std = "1.6"
+tokio = { version = "1", features = ["rt"] }
 libc = "0.2"
